k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: LoadBalancer
  selector:
    app: haikube-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
